# assemblit

./: .coverage  .env  .flake8  .gitignore  Dockerfile  Home.py  LICENSE  README.md  Welcome.py  app.py  compose.yaml  example.db  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
.assemblit/: config.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: coverage-tests.yml  publish-gcs.yml  publish-pypi.yml  unit-tests.yml
.streamlit/: config.toml
assemblit/: __init__.py  data_toolkit.py  db.py  setup.py  vault.py  web.py
assemblit/_app/: __init__.py  layer.py
assemblit/_auth/: __init__.py  vault.py
assemblit/_components/: _data_review.py  _key_value.py  _run_analysis.py  _selector.py
assemblit/_database/: __init__.py  _adapters.py  _datatypes.py  _generic.py  _structures.py  _syntax.py  analysis.py  data.py  sessions.py  users.py
assemblit/_orchestrator/: __init__.py  layer.py  setup.py
assemblit/app/: __init__.py  apps.py  exceptions.py  layer.py  structures.py
assemblit/auth/: __init__.py  vault.py
assemblit/blocks/: __init__.py  structures.py
assemblit/database/: __init__.py  _datatypes.py  _generic.py  _structures.py  _syntax.py  adapters.py  analysis.py  (+7 more)
contract/: data_dictionary.csv
coverage/: COVERAGE.md
documentation/: README.md
getstreamy/: __init__.py  data_toolkit.py  db.py  setup.py  vault.py  web.py
pages/: 1_Studies.py  2_Data.py  3_Workflow.py  4_Analysis.py  999_Settings.py
pytilities/: utils.py
site/: welcome.py
tests/: test_app_layer.py  test_blocks.py  test_pages.py  test_toolkit.py
(+127 files in other folders)
