[metadata]
name = assemblit
description = Assemblit is helping data analysts and scientists rapidly scale notebooks into analytics-as-a-service (AaaS) web-applications.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Eleff
url = https://github.com/thomaseleff/assemblit
project_urls =
    Issues = https://github.com/thomaseleff/assemblit/issues
    Releases = https://github.com/thomaseleff/assemblit/releases
classifiers =
    Development Status :: 4 - Beta
    Topic :: Database :: Front-Ends
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
include_package_data = True
python_requires = >=3.7.1
install_requires =
    streamlit==1.36.0
    regex==2023.10.3
    argon2-cffi==23.1.0
    email-validator==2.1.0.post1
    pandas==2.1.4
    pandera==0.19.0
    plotly==5.8.0
    python-dotenv==1.0.0
    pytensils==1.2.0
    pyyaml==6.0.1

[options.entry_points]
console_scripts =
    assemblit = assemblit.app.cli.assemblit:main
    orchestrator = assemblit.orchestrator.cli.orchestrator:main